--- a/package.json
+++ b/package.json
@@ -10,22 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^1.5.1",
+    "axios-cookiejar-support": "^6.0.2",
     "bcrypt": "^4.0.1",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dotenv": "^8.6.0",
+    "express": "^4.21.2",
     "express-validator": "^6.4.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mssql": "^6.2.0",
-    "mysql2": "^3.3.4",
-    "nodemon": "^2.0.4",
-    "pg": "^8.2.1"
+    "mysql2": "^3.14.1",
+    "pg": "^8.2.1",
+    "tough-cookie": "^5.1.2"
   },
   "devDependencies": {
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.10"
   }
 }
